refactor: Criação de macros para response success e error
